--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=cardbackend
+spring.datasource.url = jdbc:mysql://localhost:3306/employee_card
+spring.datasource.username = root
+spring.datasource.password = FA.t160102
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+
+server.port = 9192
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view = false
+
