--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=cardbackend
 spring.datasource.url = jdbc:mysql://localhost:3306/employee_card
 spring.datasource.username = root
-spring.datasource.password = FA.t160102
+spring.datasource.password = root
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 
 server.port = 9192
